Fix scrolling on iOS

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1130,7 +1130,6 @@ blockquote {
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-attachment: fixed;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-flex;
@@ -1141,6 +1140,16 @@ blockquote {
   -webkit-align-items: flex-end;
   -moz-align-items: flex-end;
   align-items: flex-end;
+}
+@media (max-width: 500px) {
+  .header-image {
+    background-attachment: scroll;
+  }
+}
+@media (min-width: 501px) {
+  .header-image {
+    background-attachment: fixed;
+  }
 }
 
 .header-image__text-container {
